--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-slot": "^1.1.0",
         "axios": "^1.7.3",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
         "next": "14.2.5",
         "node-routeros": "^1.6.9",
         "react": "^18",
         "react-dom": "^18",
         "source-map-support": "^0.5.21",
+        "tailwind-merge": "^2.5.0",
+        "tailwindcss-animate": "^1.0.7",
         "uuid": "^10.0.0"
     },
     "devDependencies": {
