--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "axios": "^1.7.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "lucide-react": "^0.427.0",
         "next": "14.2.5",
         "next-themes": "^0.3.0",
         "node-routeros": "^1.6.9",
@@ -27,6 +28,7 @@
         "uuid": "^10.0.0"
     },
     "devDependencies": {
+        "@types/react": "^18.3.3",
         "eslint": "^8",
         "eslint-config-next": "14.2.5",
         "postcss": "^8",
