--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "lucide-react": "^0.427.0",
+        "mongoose": "^8.5.2",
         "next": "14.2.5",
         "next-themes": "^0.3.0",
         "node-routeros": "^1.6.9",
