--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "source-map-support": "^0.5.21",
         "tailwind-merge": "^2.5.0",
         "tailwindcss-animate": "^1.0.7",
-        "uuid": "^10.0.0"
+        "uuid": "^10.0.0",
+        "zod": "^3.23.8"
     },
     "devDependencies": {
         "@types/react": "^18.3.3",
