--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@radix-ui/react-label": "^2.1.0",
         "@radix-ui/react-slot": "^1.1.0",
         "axios": "^1.7.3",
+        "bcryptjs": "^2.4.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "lucide-react": "^0.427.0",
@@ -30,6 +31,7 @@
         "zod": "^3.23.8"
     },
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.6",
         "@types/react": "^18.3.3",
         "eslint": "^8",
         "eslint-config-next": "14.2.5",
