--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@hookform/resolvers": "^3.9.0",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-label": "^2.1.0",
         "@radix-ui/react-slot": "^1.1.0",
@@ -16,6 +17,7 @@
         "bcryptjs": "^2.4.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "input-otp": "^1.2.4",
         "lucide-react": "^0.427.0",
         "mongoose": "^8.5.2",
         "next": "14.2.5",
@@ -23,6 +25,7 @@
         "node-routeros": "^1.6.9",
         "react": "^18",
         "react-dom": "^18",
+        "react-hook-form": "^7.52.2",
         "sonner": "^1.5.0",
         "source-map-support": "^0.5.21",
         "tailwind-merge": "^2.5.0",
