--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "lucide-react": "^0.427.0",
         "mongoose": "^8.5.2",
         "next": "14.2.5",
+        "next-auth": "^4.24.7",
         "next-themes": "^0.3.0",
         "node-routeros": "^1.6.9",
         "react": "^18",
