Update Login And Register Error Handing And Auto Login After Verifying OTP

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,9 +73,9 @@ jobs:
                     docker rm wifi-hotspot-container
                   fi
 
-            # - name: Remove old Docker images
-            #   run: |
-            #       docker rmi -f $(docker images -q)
+            - name: Remove old Docker images
+              run: |
+                  docker rmi -f $(docker images -q)
 
             - name: Free up Docker space
               run: |
