--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.52.2",
+        "sharp": "^0.33.4",
         "sonner": "^1.5.0",
         "source-map-support": "^0.5.21",
         "tailwind-merge": "^2.5.0",
