--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@radix-ui/react-dropdown-menu": "^2.1.1",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-select": "^2.1.1",
         "@radix-ui/react-slot": "^1.1.0",
         "axios": "^1.7.3",
         "bcryptjs": "^2.4.3",
