--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
         "@types/react": "^18.3.3",
+        "@types/uuid": "^10.0.0",
         "eslint": "^8",
         "eslint-config-next": "14.2.5",
         "postcss": "^8",
