add deploy BASE_URL env

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,7 @@ jobs:
                   echo "NEXTAUTH_URL=${{ secrets.NEXTAUTH_URL }}" >> .env
                   echo "NEXT_PUBLIC_BASE_URL=${{ secrets.NEXT_PUBLIC_BASE_URL }}" >> .env
                   echo "SMS_API_KEY=${{ secrets.SMS_API_KEY }}" >> .env
+                  echo "BASE_URL=${{ secrets.BASE_URL }}" >> .env
 
             - name: Archive .env file
               run: tar -czf env.tar.gz .env
