--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^3.9.0",
+        "@radix-ui/react-avatar": "^1.1.0",
         "@radix-ui/react-dropdown-menu": "^2.1.1",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-progress": "^1.1.0",
         "@radix-ui/react-select": "^2.1.1",
         "@radix-ui/react-slot": "^1.1.0",
         "axios": "^1.7.3",
@@ -20,10 +22,11 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "input-otp": "^1.2.4",
+        "jose": "^5.6.3",
         "lucide-react": "^0.427.0",
         "mongoose": "^8.5.2",
         "next": "14.2.5",
-        "next-auth": "^4.24.7",
+        "next-auth": "^5.0.0-beta.20",
         "next-themes": "^0.3.0",
         "node-routeros": "^1.6.9",
         "react": "^18",
