--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "clsx": "^2.1.1",
         "input-otp": "^1.2.4",
         "jose": "^5.6.3",
+        "js-cookie": "^3.0.5",
         "lucide-react": "^0.427.0",
         "mongoose": "^8.5.2",
         "next": "14.2.5",
@@ -42,6 +43,7 @@
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
+        "@types/js-cookie": "^3.0.6",
         "@types/react": "^18.3.3",
         "@types/uuid": "^10.0.0",
         "eslint": "^8.57.0",
