--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
         "input-otp": "^1.2.4",
         "jose": "^5.6.3",
         "lucide-react": "^0.427.0",
+        "moment": "^2.30.1",
         "mongoose": "^8.5.2",
         "next": "14.2.5",
         "next-themes": "^0.3.0",
+        "nextjs-progressbar": "^0.0.16",
         "node-routeros": "^1.6.9",
         "react": "^18",
         "react-dom": "^18",
