Implement Next Top Loader in page

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "mongoose": "^8.5.2",
         "next": "14.2.5",
         "next-themes": "^0.3.0",
-        "nextjs-progressbar": "^0.0.16",
+        "nextjs-toploader": "^1.6.12",
         "node-routeros": "^1.6.9",
         "react": "^18",
         "react-dom": "^18",
@@ -44,7 +44,6 @@
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
-        "@types/js-cookie": "^3.0.6",
         "@types/react": "^18.3.3",
         "@types/uuid": "^10.0.0",
         "eslint": "^8.57.0",
