--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "next": "14.2.5",
         "next-themes": "^0.3.0",
         "nextjs-toploader": "^1.6.12",
+        "node-cron": "^3.0.3",
         "node-routeros": "^1.6.9",
         "react": "^18",
         "react-dom": "^18",
@@ -44,6 +45,7 @@
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
+        "@types/node-cron": "^3.0.11",
         "@types/react": "^18.3.3",
         "@types/uuid": "^10.0.0",
         "eslint": "^8.57.0",
