--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "jose": "^5.6.3",
         "lucide-react": "^0.427.0",
         "moment": "^2.30.1",
+        "moment-timezone": "^0.5.45",
         "mongoose": "^8.5.2",
         "next": "14.2.5",
         "next-themes": "^0.3.0",
