--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "bcryptjs": "^2.4.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "crypto-js": "^4.2.0",
         "input-otp": "^1.2.4",
         "jose": "^5.6.3",
         "lucide-react": "^0.427.0",
@@ -45,6 +46,7 @@
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
+        "@types/crypto-js": "^4.2.2",
         "@types/node-cron": "^3.0.11",
         "@types/react": "^18.3.3",
         "@types/uuid": "^10.0.0",
