--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "@types/crypto-js": "^4.2.2",
         "@types/node-cron": "^3.0.11",
         "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
         "@types/uuid": "^10.0.0",
         "eslint": "^8.57.0",
         "eslint-config-next": "14.2.5",
