--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
         "axios": "^1.7.3",
         "bcryptjs": "^2.4.3",
         "class-variance-authority": "^0.7.0",
+        "cloudinary": "^2.4.0",
         "clsx": "^2.1.1",
         "crypto-js": "^4.2.0",
         "input-otp": "^1.2.4",
         "jose": "^5.6.3",
         "lucide-react": "^0.427.0",
         "moment": "^2.30.1",
-        "moment-timezone": "^0.5.45",
         "mongoose": "^8.5.2",
         "next": "14.2.5",
         "next-themes": "^0.3.0",
