--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.52.2",
+        "recharts": "^2.12.7",
         "sharp": "^0.33.4",
         "sonner": "^1.5.0",
         "source-map-support": "^0.5.21",
