--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "@radix-ui/react-progress": "^1.1.0",
         "@radix-ui/react-select": "^2.1.1",
         "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-tabs": "^1.1.0",
+        "@tanstack/react-table": "^8.20.1",
         "axios": "^1.7.3",
         "bcryptjs": "^2.4.3",
         "class-variance-authority": "^0.7.0",
