Implement Image Upload Page

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@radix-ui/react-separator": "^1.1.0",
         "@radix-ui/react-slot": "^1.1.0",
         "@radix-ui/react-tabs": "^1.1.0",
+        "@tabler/icons-react": "^3.14.0",
         "@tanstack/react-table": "^8.20.1",
         "axios": "^1.7.3",
         "bcryptjs": "^2.4.3",
@@ -29,6 +30,7 @@
         "cloudinary": "^2.4.0",
         "clsx": "^2.1.1",
         "crypto-js": "^4.2.0",
+        "framer-motion": "^11.4.0",
         "input-otp": "^1.2.4",
         "jose": "^5.6.3",
         "lucide-react": "^0.427.0",
@@ -40,12 +42,13 @@
         "node-routeros": "^1.6.9",
         "react": "^18",
         "react-dom": "^18",
+        "react-dropzone": "^14.2.3",
         "react-hook-form": "^7.52.2",
         "recharts": "^2.12.7",
         "sharp": "^0.33.4",
         "sonner": "^1.5.0",
         "source-map-support": "^0.5.21",
-        "tailwind-merge": "^2.5.0",
+        "tailwind-merge": "^2.5.2",
         "tailwindcss-animate": "^1.0.7",
         "uuid": "^10.0.0",
         "zod": "^3.23.8"
