--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,14 +78,14 @@ jobs:
                     docker rm wifi-hotspot-container
                   fi
 
-            - name: Remove old Docker images
-              run: |
-                  docker rmi -f $(docker images -q)
+            # - name: Remove old Docker images
+            #   run: |
+            #       docker rmi -f $(docker images -q)
 
-            - name: Free up Docker space
-              run: |
-                  docker system prune -af
-                  docker volume prune -f
+            # - name: Free up Docker space
+            #   run: |
+            #       docker system prune -af
+            #       docker volume prune -f
 
             - name: Pull image from Docker Hub
               run: docker pull prominhaj/wifi-hotspot:latest
