--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@tanstack/react-table": "^8.20.1",
         "axios": "^1.7.3",
         "bcryptjs": "^2.4.3",
+        "browser-image-compression": "^2.0.2",
         "class-variance-authority": "^0.7.0",
         "cloudinary": "^2.4.0",
         "clsx": "^2.1.1",
