Implement Showing Mac Address by showing dashboard mac-address route

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "class-variance-authority": "^0.7.0",
         "cloudinary": "^2.4.0",
         "clsx": "^2.1.1",
+        "cmdk": "^1.0.0",
         "crypto-js": "^4.2.0",
         "framer-motion": "^11.4.0",
         "input-otp": "^1.2.4",
