Change Deploy Server

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,24 +68,24 @@ jobs:
             - name: Extract environment file
               run: tar -xzf env.tar.gz
 
-            - name: Check Disk Space
-              run: df -h
+            # - name: Check Disk Space
+            #   run: df -h
 
-            - name: Stop and remove old container if exists
-              run: |
-                  if [ $(docker ps -q -f name=wifi-hotspot-container) ]; then
-                    docker stop wifi-hotspot-container
-                    docker rm wifi-hotspot-container
-                  fi
+            # - name: Stop and remove old container if exists
+            #   run: |
+            #       if [ $(docker ps -q -f name=wifi-hotspot-container) ]; then
+            #         docker stop wifi-hotspot-container
+            #         docker rm wifi-hotspot-container
+            #       fi
 
-            - name: Remove old Docker images
-              run: |
-                  docker rmi -f $(docker images -q)
+            # - name: Remove old Docker images
+            #   run: |
+            #       docker rmi -f $(docker images -q)
 
-            - name: Free up Docker space
-              run: |
-                  docker system prune -af
-                  docker volume prune -f
+            # - name: Free up Docker space
+            #   run: |
+            #       docker system prune -af
+            #       docker volume prune -f
 
             - name: Pull image from Docker Hub
               run: docker pull prominhaj/wifi-hotspot:latest
