--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@radix-ui/react-select": "^2.1.1",
         "@radix-ui/react-separator": "^1.1.0",
         "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-switch": "^1.1.4",
         "@radix-ui/react-tabs": "^1.1.0",
         "@tabler/icons-react": "^3.14.0",
         "@tanstack/react-table": "^8.20.1",
