--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@radix-ui/react-slot": "^1.1.0",
         "@radix-ui/react-switch": "^1.1.4",
         "@radix-ui/react-tabs": "^1.1.0",
+        "@radix-ui/react-tooltip": "^1.2.0",
         "@tabler/icons-react": "^3.14.0",
         "@tanstack/react-table": "^8.20.1",
         "axios": "^1.7.3",
