--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Next.js application
+name: Deploy Next.js Application to Docker Hub and Server
 
 on:
   push:
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Source
         uses: actions/checkout@v4
@@ -36,14 +37,18 @@ jobs:
       - name: Archive .env file
         run: tar -czf env.tar.gz .env
 
-      - name: Build Docker image
-        run: docker build -t prominhaj/wifi-hotspot:latest .
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Login to Docker Hub
-        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-
-      - name: Publish image to Docker Hub
-        run: docker push prominhaj/wifi-hotspot:latest
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: prominhaj/wifi-hotspot:latest
 
       - name: Upload environment file
         uses: actions/upload-artifact@v4
@@ -54,6 +59,7 @@ jobs:
   deploy:
     needs: build
     runs-on: self-hosted
+
     steps:
       - name: Download environment file
         uses: actions/download-artifact@v4
@@ -61,23 +67,15 @@ jobs:
           name: env-file
           path: .
 
-      - name: Extract environment file
+      - name: Extract .env file
         run: tar -xzf env.tar.gz
 
-      - name: Check Disk Space
-        run: df -h
-
-      - name: Stop and remove old container if exists
+      - name: Stop and remove old container
         run: |
-          if [ $(docker ps -q -f name=wifi-hotspot-container) ]; then
-            docker stop wifi-hotspot-container
-            docker rm wifi-hotspot-container
-          fi
+          docker stop wifi-hotspot-container || true
+          docker rm wifi-hotspot-container || true
 
-      - name: Remove old Docker images
-        run: docker rmi -f $(docker images -q) || true
-
-      - name: Free up Docker space
+      - name: Prune Docker system
         run: |
           docker system prune -af || true
           docker volume prune -f || true
@@ -85,5 +83,10 @@ jobs:
       - name: Pull image from Docker Hub
         run: docker pull prominhaj/wifi-hotspot:latest
 
-      - name: Run Docker container
-        run: docker run -d -p 3000:3000 --env-file .env --name wifi-hotspot-container prominhaj/wifi-hotspot:latest
+      - name: Run new container
+        run: |
+          docker run -d \
+            -p 3000:3000 \
+            --env-file .env \
+            --name wifi-hotspot-container \
+            prominhaj/wifi-hotspot:latest
