--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Next.js Application to Docker Hub and Server
+name: Deploy Next.js application
 
 on:
   push:
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Source
+      - name: Checkout source code
         uses: actions/checkout@v4
 
       - name: Create .env file
@@ -34,10 +34,13 @@ jobs:
           echo "CLOUDINARY_API_KEY=${{ secrets.CLOUDINARY_API_KEY }}" >> .env
           echo "CLOUDINARY_API_SECRET=${{ secrets.CLOUDINARY_API_SECRET }}" >> .env
 
-      - name: Archive .env file
+      - name: Archive .env
         run: tar -czf env.tar.gz .env
 
-      - name: Log in to Docker Hub
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -47,10 +50,11 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: ./Dockerfile
           push: true
           tags: prominhaj/wifi-hotspot:latest
 
-      - name: Upload environment file
+      - name: Upload .env file for deployment
         uses: actions/upload-artifact@v4
         with:
           name: env-file
@@ -61,7 +65,7 @@ jobs:
     runs-on: self-hosted
 
     steps:
-      - name: Download environment file
+      - name: Download .env file
         uses: actions/download-artifact@v4
         with:
           name: env-file
@@ -70,23 +74,23 @@ jobs:
       - name: Extract .env file
         run: tar -xzf env.tar.gz
 
-      - name: Stop and remove old container
+      - name: Stop and remove old container if running
         run: |
           docker stop wifi-hotspot-container || true
           docker rm wifi-hotspot-container || true
 
-      - name: Prune Docker system
+      - name: Clean up Docker environment
         run: |
-          docker system prune -af || true
+          docker image prune -af || true
           docker volume prune -f || true
 
-      - name: Pull image from Docker Hub
+      - name: Pull latest Docker image
         run: docker pull prominhaj/wifi-hotspot:latest
 
-      - name: Run new container
+      - name: Run new Docker container
         run: |
           docker run -d \
-            -p 3000:3000 \
-            --env-file .env \
             --name wifi-hotspot-container \
+            --env-file .env \
+            -p 3000:3000 \
             prominhaj/wifi-hotspot:latest
